kubernetes/infrastructure/base/pgadmin4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gluetun
  namespace: media

spec:
  volumeMounts:
    - name: servers-config
      mountPath: /pgadmin4/servers.json
      subPath: servers.json
      readOnly: true
    - name: pgpass
      mountPath: /pgpassfile
      subPath: pgpassfile
      readOnly: true
  volumes:
    - name: servers-config
      configMap:
        name: pgadmin-servers
    - name: pgpass
      secret:
        secretName: pgadmin-pgpass
        defaultMode: 0600
