kubernetes/infrastructure/base/pgadmin4/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin4-ingress
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pgadmin4.theblacklodge.dev`)
      kind: Rule
      services:
        - name: pgadmin4
          port: 80
